--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -51,7 +51,15 @@ nav a,
 p a {
     color: $black;
     text-decoration: none;
+}
+
+nav a.selected,
+p a {
     border-bottom: 3px solid $red;
+}
+
+img {
+    max-width: 780px;
 }
 
 p.read-more {
